--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // 应用插件
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.blxt.clipboardmanager"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,20 +26,28 @@ android {
         // 设置生成的数据库相关文件的包名，默认为entity所在的包名
         daoPackage 'com.blxt.greendao.gen'
     }
+
+    repositories {
+        flatDir{
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     //implementation files('libs/junit.jar')
     implementation files('libs/open_sdk_r6019_lite.jar')
     //    数据库框架
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation(name: 'quickset-1.0.0', ext:'aar')
+    //  compile project(path: ':quickset')
+    //  implementation(name: 'setinglibrary-1.0.1', ext:'aar')
+  //  implementation project(path: ':quickset2')
+    //  implementation(name: 'setinglibrary-1.0.0', ext:'aar')
 }
